syntax = "proto3";

package bytebase.v1;

import "google/protobuf/timestamp.proto";

option go_package = "generated-go/v1";

message PushEvent {
  VcsType vcs_type = 1;
  // Deprecated
  reserved 2;
  string ref = 3;
  string before = 4;
  string after = 5;
  string repository_id = 6;
  string repository_url = 7;
  string repository_full_path = 8;
  string author_name = 9;
  repeated Commit commits = 10;
  // Deprecated
  reserved 11;
}

message Commit {
  string id = 1;
  string title = 2;
  string message = 3;
  google.protobuf.Timestamp created_time = 4;
  string url = 5;
  string author_name = 6;
  string author_email = 7;
  repeated string added_list = 8;
  repeated string modified_list = 9;
}

enum VcsType {
  VCS_TYPE_UNSPECIFIED = 0;
  GITLAB = 1;
  GITHUB = 2;
  BITBUCKET = 3;
}
